# INSA-GL-Analyse-medicale

./: .gitignore  .travis.yml  CMakeLists.txt  INSA-GL-Analyse-medicale.sln  README.md  Server.cpp  Server.h  diseases.txt
MedAnalysisClient/: CMakeLists.txt  main.cpp
MedAnalysisClient/exceptions/: CommunicationException.cpp  CommunicationException.h  ReadException.cpp  ReadException.h  ServiceException.cpp  ServiceException.h
MedAnalysisClient/models/: Disease.cpp  Disease.h  Genome.cpp  Genome.h  Server.cpp  Server.h
MedAnalysisClient/services/: AnalysisService.cpp  AnalysisService.h  ServerService.cpp  ServerService.h  ServersService.cpp  ServersService.h
MedAnalysisClient/storage/: GenomeDAO.cpp  GenomeDAO.h  ServerDAO.cpp  ServerDAO.h
MedAnalysisClient/utils/: utils.h
MedAnalysisServer/: CMakeLists.txt
MedAnalysisServer/controllers/: AllController.cpp  AllController.h  ListController.cpp  ListController.h  OneController.cpp  OneController.h
MedAnalysisServer/exceptions/: AnalysisException.h  DiseaseNotFoundException.h  ReadException.h
MedAnalysisServer/models/: Disease.cpp  Disease.h  Genome.cpp  Genome.h
MedAnalysisServer/services/: AnalysisService.cpp  AnalysisService.h  DiscoverService.cpp  DiscoverService.h
MedAnalysisServer/storage/: DiseaseDAO.cpp  DiseaseDAO.h
MedAnalysisServer/utils/: utils.cpp  utils.h
client/: AnalysisService.cpp  AnalysisService.h  ClientDlg.cpp  ClientDlg.h  CommunicationException.cpp  CommunicationException.h  Disease.cpp  Disease.h  Genome.cpp  Genome.h  MulticastSocket.cpp  MulticastSocket.h  MulticastUtil.cpp  MulticastUtil.h  ReadException.cpp  ReadException.h  Resource.h  Server.cpp  Server.db  Server.h  ServerDAO.cpp  ServerDAO.h  ServerService.cpp  ServerService.h  ServiceException.cpp  ServiceException.h  client.cpp  client.h  client.rc  client.vcxproj  client.vcxproj.filters
client/models/: Server.cpp  Server.h
client/services/: ServerService.cpp  ServerService.h
client/view/: ClientDlg.cpp  ClientDlg.h  Resource.h
doc/: Dossier de conception.docx
libs/catch/: catch.hpp
res/: Dictionary.txt  DictionaryLF.txt  Genome.txt
server/: AnalysisException.cpp  AnalysisException.h  AnalysisService.cpp  AnalysisService.h  ClientSocket.cpp  ClientSocket.h  DiscoverService.cpp  Disease.cpp  Disease.h  DiseaseNotFoundException.cpp  DiseaseNotFoundException.h  Genome.cpp  Genome.h  Main.cpp  MulticastSocket.cpp  MulticastSocket.h  ReadException.cpp  ReadException.h  Resource.h  ServerListener.cpp  ServerListener.h  diseaseDAO.cpp  diseaseDAO.h  server.cpp  server.h  server.rc  server.vcxproj  server.vcxproj.filters  serverDlg.cpp  serverDlg.h  sqlite3.exp  stdafx.cpp  stdafx.h
server/dao/: diseaseDAO.cpp  diseaseDAO.h
server/exceptions/: AnalysisException.cpp  DiseaseNotFoundException.cpp  DiseaseNotFoundException.h
server/libs/sqlite3/: sqlite3.lib
server/models/: Disease.cpp  Disease.h  Genome.cpp  Genome.h
server/services/: DiscoverService.cpp  DiscoverService.h
tests/ClientUnitTest/: ClientUnitTest.vcxproj  stdafx.cpp  stdafx.h  unittest1.cpp
tests/MedAnalysisClientUnitTest/: CMakeLists.txt  tests-main.cpp  tests-models.cpp  tests-storage.cpp
tests/MedAnalysisServerUnitTest/: CMakeLists.txt  tests-controllers.cpp  tests-main.cpp  tests-models.cpp  tests-services.cpp  tests-storage.cpp  tests-utils.cpp
tests/ServerUnitTest/: ServerUnitTest.vcxproj  models.cpp  stdafx.cpp  unittest1.cpp
tests/datatest/: diseases.txt
